styles/Home.module.scss
@import 'initial-variables.sass';

.container {
  min-height: calc(100vh - .75em);
  padding: 0 .2rem;
  display: grid;
  grid-template-rows: 2em auto auto;
  background-color: $grey-lighter;
  @media screen and (min-width: $tablet) {
    padding: 0 1.0rem;    
  }
}

.container.searching {
  grid-template-rows: 0 auto auto;
}

.container.halved {
  grid-template-rows: 2em 50% auto;
}

.container.maxed {
  grid-template-rows: 2em 2em auto;
}
.main {
  padding: 5rem 0;
  /* flex: 1; */
  /* display: flex; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

$column-gap: 0.75rem !default;

.columns {
  display: block;
  margin-right: 0;
  margin-left: 0;
  overflow-y: hidden;
  @media screen and (min-width: $tablet) {
    display: flex; 
  }
  @media screen and (min-width: $desktop) {
    padding-left: 5vw;
    padding-right: 5vw;
  }
}

.column {
  display: block;
  padding: 0.75rem 0.25rem 0 0.25rem;
  @media screen and (min-width: $tablet) {
    flex: none;
    padding: 0.75rem 0.75rem 0 0.75rem;
    width: 33%;
    flex-basis: 0;
    flex-grow: 1;
    flex-shrink: 1;
  }
}

.footer {
  justify-content: center;
  align-items: center;
  position: fixed !important;
  bottom: 0;
  display: flex;
  font-size: smaller;
  width: 100%;
  background-color: rgb(255,255,255,0.8);
  @media screen and (min-width: $desktop) {
    font-size:unset
  }
}

.footer a {
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  text-decoration: revert;
}

.footer span {
  margin-left: 1ex;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.title,
.description {
  text-align: center;
}

.description {
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
  margin-top: 3rem;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  width: 45%;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

@media screen and (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

.artistSearchContainer {
  text-align: center;
  display: flex;
  flex: 1 0 10px;
}

.headphones {
  opacity: .5;
  object-position: top;
  object-fit: contain;
  top: 12rem !important;
  padding-bottom: 10rem !important;
  padding-right: 2em !important;
  margin-left: 1em !important;
}

